# matchbox

./: .bumpversion.cfg  .coveragerc  .gitignore  .rstcheck.cfg  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  Pipfile  README.rst  index.html  index.md  mypy.ini  performance.py  pylama.ini  pylintrc  pyproject.toml  pytest.ini  requirements-lint.txt  requirements-test.txt  setup.cfg  setup.py
.github/workflows/: automerge.yml  automergelint.yml  benchmarks.yml  build.yml  linters.yml  pypi.yml  sphinx-docs.yml  tests.yml
benchmarks/: __init__.py  conftest.py  data.js  test_matchbox_add.py  test_matchbox_match.py
benchmarks/3.7/: data.js
benchmarks/3.8/: data.js
benchmarks/3.9/: data.js
benchmarks/pypy-3.7-v7.3.3/: data.js
dev/bench/: data.js
docs/: .buildinfo  api.html  authors.html  changelog.html  contributing.html  genindex.html  glossary.html  index.html  objects.inv  py-modindex.html  rationale.html  search.html  searchindex.js  usage.html
docs/.doctrees/: api.doctree  authors.doctree  changelog.doctree  contributing.doctree  environment.pickle  glossary.doctree  index.doctree  rationale.doctree  usage.doctree
docs/_sources/: glossary.rst.txt  rationale.rst.txt  usage.rst.txt
docs/source/: api.rst  conf.py  index.rst  rationale.rst  usage.rst
matchbox/: __init__.py  box.py  index.py
newsfragments/: +700dd1d9.break.rst  +aba40623.feature.rst  422.misc.rst  423.misc.rst  425.misc.rst  426.misc.rst  427.misc.rst  434.misc.rst  435.misc.rst  443.misc.rst  481.misc.rst  483.misc.rst  506.misc.rst  593.misc.rst
src/matchbox/: __init__.py  basebox.py  box.py  index.py  match_index.py  matchbox.py  matchindex.py  multimatchbox.py
tests/: __init__.py  test_base.py  test_basebox.py  test_match.py  test_match_complex.py  test_matchbox.py  test_multimatchbox.py
