[metadata]
name = matchbox
version = 1.1.1
url = https://github.com/ClearcodeHQ/matchbox
description = Abstraction layer for creating hash maps to speed up extracting subsets out of objects in collection
long_description = file: README.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords = index, match, set, hashmap
license = LGPLv3+
maintainer = Grzegorz Śliwiński
maintainer_email = fizyk+pypi@fizyk.net.pl
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.7
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-benchmark
docs =
    sphinx

[options.package_data]
matchbox = py.typed

[pycodestyle]
max-line-length = 120
exclude = docs/*,build/*,venv/*

[pydocstyle]
match = '(?!docs|build|venv).*\.py'

[tool:pytest]
addopts =  -vvv --capture=no --showlocals --verbose --cov src/matchbox --cov tests
testpaths = tests/
filterwarnings = error
xfail_strict = True
